k8s/todoro/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: todoro
spec:
  selector:
    app: frontend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
